# aiolinknlink

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/aiolinknlink/: __init__.py  client.py  local_udp.py  models.py
src/aiolinknlink/protocol/: __init__.py  dna.py  emotion.py
tests/: __init__.py  test_client.py  test_client_edge_cases.py  test_local_udp.py  test_local_udp_edge_cases.py  test_protocol.py  test_protocol_edge_cases.py  test_transport.py
