[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aiolinknlink"
version = "0.3.2"
description = "Asynchronous local client for LinknLink eMotion Ultra2 devices"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "LinknLink" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "aioesphomeapi>=45.6.0,<46.0",
  "cryptography>=41.0.0",
]

[project.urls]
Changelog = "https://github.com/linknlink/aiolinknlink/blob/main/CHANGELOG.md"
Homepage = "https://github.com/linknlink/aiolinknlink"
Repository = "https://github.com/linknlink/aiolinknlink"
Issues = "https://github.com/linknlink/aiolinknlink/issues"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
]
dev = [
  "aiolinknlink[test]",
  "build>=1.2",
  "mypy>=1.10",
  "ruff>=0.9",
  "twine>=5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aiolinknlink"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["aiolinknlink"]

[tool.coverage.report]
fail_under = 95

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ASYNC", "B", "D", "E", "F", "I", "UP"]
ignore = [
  "ASYNC109",
  "COM812",
  "D107",
  "D203",
  "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["aiolinknlink"]
